cmake_minimum_required(VERSION 2.8)
project(spi_bridge)
# find_package( OpenCV REQUIRED )
add_executable( ${PROJECT_NAME} main.cpp )
# target_link_libraries( ${PROJECT_NAME} wiringPi)
target_link_libraries(${PROJECT_NAME} -lspidev-lib++)
# add_definitions(-std=c++0x -L/home/pi/wiringPi/wiringPi -lwiringPi )